// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help Page renders three help article sections with proper btn callbacks 1`] = `
"<div class=\\"wrapper wrapper\\">
  <aside class=\\"col-sm-12 col-md-4 sideBar\\">
    <header>
      <h2>Help</h2>
      <p>
        Browse through our tutorials, check out the FAQ or connect with our
        knowledgeable community.
      </p>
      <a class=\\"help-onboarding\\">
        New to Hub? Take a tour<span class=\\"icon arrow-right \\" />
      </a>
      <a
        class=\\"terms-of-use\\"
        href=\\"https://lisk.io/terms-conditions\\"
        target=\\"_blank\\"
        rel=\\"noopener noreferrer\\"
      >
        Terms of Use<span class=\\"icon arrow-right \\" />
      </a>
    </header>
  </aside>
  <section class=\\"col-sm-12 col-md-8 helpSection help-articles\\">
    <article>
      <h2>
        <span class=\\"icon logo-icon headerIcon\\" />Help Center
      </h2>
      <div class=\\"articleContainer\\">
        <div>
          <p>
            Search for answers in our extensive{\\" \\"}
            <span class=\\"inlineIcon\\">
              <span class=\\"icon info \\" />
              <b> FAQ</b>
            </span>{\\" \\"}
            or get in touch in via{\\" \\"}
            <span class=\\"inlineIcon\\">
              <span class=\\"icon conversation \\" />
              <b> Chat</b>
            </span>
            .
          </p>
        </div>
        <div>
          <button
            class=\\"help-visit-center\\"
            type=\\"button\\"
            data-react-toolbox=\\"button\\"
          >
            Visit Help Center<span class=\\"icon arrow-right \\" />
          </button>
        </div>
      </div>
    </article>
    <article>
      <h2>
        <span class=\\"icon academy headerIcon\\" />Academy
      </h2>
      <div class=\\"articleContainer\\">
        <div>
          <p>Learn about blockchain with our comprehensive knowledge base.</p>
        </div>
        <div>
          <ul>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.io/academy/blockchain-basics/what-is-blockchain/eli5-blockchain\\"
                rel=\\"noopener noreferrer\\"
              >
                Explain Blockchain Like I&#x27;m 5
                <span class=\\"icon arrow-right \\" />
              </a>
            </li>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.io/academy/blockchain-basics/benefits-of-blockchain/blockchain-security\\"
                rel=\\"noopener noreferrer\\"
              >
                Is Blockchain Secure?<span class=\\"icon arrow-right \\" />
              </a>
            </li>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.io/academy/blockchain-basics/how-does-blockchain-work\\"
                rel=\\"noopener noreferrer\\"
              >
                See more<span class=\\"icon arrow-right \\" />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </article>
    <article>
      <h2>
        <span class=\\"icon lisk-chat headerIcon\\" />Lisk.Chat
      </h2>
      <div class=\\"articleContainer\\">
        <div>
          <p>Don’t be a stranger! Connect with our worldwide community.</p>
        </div>
        <div>
          <ul>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.chat/home\\"
                rel=\\"noopener noreferrer\\"
              >
                Visit Lisk.Chat<span class=\\"icon arrow-right \\" />
              </a>
            </li>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.chat/channel/help-desk\\"
                rel=\\"noopener noreferrer\\"
              >
                See #help-desk channel<span class=\\"icon arrow-right \\" />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </article>
  </section>
</div>;
"
`;

exports[`Help Page renders three help article sections with proper btn callbacks 2`] = `
"<div class=\\"wrapper wrapper\\">
  <aside class=\\"col-sm-12 col-md-4 sideBar\\">
    <header>
      <h2>Help</h2>
      <p>
        Browse through our tutorials, check out the FAQ or connect with our
        knowledgeable community.
      </p>
      <a
        class=\\"terms-of-use\\"
        href=\\"https://lisk.io/terms-conditions\\"
        target=\\"_blank\\"
        rel=\\"noopener noreferrer\\"
      >
        Terms of Use<span class=\\"icon arrow-right \\" />
      </a>
    </header>
  </aside>
  <section class=\\"col-sm-12 col-md-8 helpSection help-articles\\">
    <article>
      <h2>
        <span class=\\"icon logo-icon headerIcon\\" />Help Center
      </h2>
      <div class=\\"articleContainer\\">
        <div>
          <p>
            Search for answers in our extensive{\\" \\"}
            <span class=\\"inlineIcon\\">
              <span class=\\"icon info \\" />
              <b> FAQ</b>
            </span>{\\" \\"}
            or get in touch in via{\\" \\"}
            <span class=\\"inlineIcon\\">
              <span class=\\"icon conversation \\" />
              <b> Chat</b>
            </span>
            .
          </p>
        </div>
        <div>
          <button
            class=\\"help-visit-center\\"
            type=\\"button\\"
            data-react-toolbox=\\"button\\"
          >
            Visit Help Center<span class=\\"icon arrow-right \\" />
          </button>
        </div>
      </div>
    </article>
    <article>
      <h2>
        <span class=\\"icon academy headerIcon\\" />Academy
      </h2>
      <div class=\\"articleContainer\\">
        <div>
          <p>Learn about blockchain with our comprehensive knowledge base.</p>
        </div>
        <div>
          <ul>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.io/academy/blockchain-basics/what-is-blockchain/eli5-blockchain\\"
                rel=\\"noopener noreferrer\\"
              >
                Explain Blockchain Like I&#x27;m 5
                <span class=\\"icon arrow-right \\" />
              </a>
            </li>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.io/academy/blockchain-basics/benefits-of-blockchain/blockchain-security\\"
                rel=\\"noopener noreferrer\\"
              >
                Is Blockchain Secure?<span class=\\"icon arrow-right \\" />
              </a>
            </li>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.io/academy/blockchain-basics/how-does-blockchain-work\\"
                rel=\\"noopener noreferrer\\"
              >
                See more<span class=\\"icon arrow-right \\" />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </article>
    <article>
      <h2>
        <span class=\\"icon lisk-chat headerIcon\\" />Lisk.Chat
      </h2>
      <div class=\\"articleContainer\\">
        <div>
          <p>Don’t be a stranger! Connect with our worldwide community.</p>
        </div>
        <div>
          <ul>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.chat/home\\"
                rel=\\"noopener noreferrer\\"
              >
                Visit Lisk.Chat<span class=\\"icon arrow-right \\" />
              </a>
            </li>
            <li>
              <a
                target=\\"_blank\\"
                href=\\"https://lisk.chat/channel/help-desk\\"
                rel=\\"noopener noreferrer\\"
              >
                See #help-desk channel<span class=\\"icon arrow-right \\" />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </article>
  </section>
</div>;
"
`;
